--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -25,8 +25,9 @@
           ],
           "defaultAuthentication": {
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 30,
-              "description": "api key description"
+              "apiKeyExpirationDate": "2024-06-20T16:22:33.736Z",
+              "apiKeyExpirationDays": 365,
+              "description": "API key"
             },
             "authenticationType": "API_KEY"
           }
