--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -25,9 +25,8 @@
           ],
           "defaultAuthentication": {
             "apiKeyConfig": {
-              "apiKeyExpirationDate": "2024-06-20T16:22:33.736Z",
-              "apiKeyExpirationDays": 365,
-              "description": "API key"
+              "apiKeyExpirationDays": 30,
+              "description": "api key description"
             },
             "authenticationType": "API_KEY"
           }
