--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/netinfo": "^9.3.10",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "amplify": "^0.0.11",
     "aws-amplify-react-native": "^7.0.2",
     "graphql-tag": "^2.12.6",
@@ -21,6 +22,8 @@
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-elements": "^3.4.3",
     "react-native-responsive-table": "^1.0.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.22.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
