--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "aws-amplify": "^5.3.5",
     "aws-amplify-react-native": "^7.0.2",
     "graphql-tag": "^2.12.6",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react": "^18.2.0",
+    "react-native": "^0.71.12",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-elements": "^3.4.3",
     "react-native-responsive-table": "^1.0.4",
