--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
     "react-native": "^0.71.12",
+    "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-elements": "^3.4.3",
     "react-native-responsive-table": "^1.0.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
+    "react-native-svg": "^13.10.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
