--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/api": "^5.3.5",
+    "@b9/react-native-autocomplete-search": "^1.3.3",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/netinfo": "^9.3.10",
     "@react-navigation/native": "^6.1.7",
@@ -24,6 +25,7 @@
     "react-native": "^0.71.12",
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
+    "react-native-autocomplete-search": "^1.0.8",
     "react-native-elements": "^3.4.3",
     "react-native-responsive-table": "^1.0.4",
     "react-native-safe-area-context": "^4.6.3",
