--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,7 +43,7 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-# MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
-# MYAPP_UPLOAD_KEY_ALIAS=HargunSandhu
-# MYAPP_UPLOAD_STORE_PASSWORD=HARgun@12345#
-# MYAPP_UPLOAD_KEY_PASSWORD=HARgun@12345#
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=har1gun2
+MYAPP_UPLOAD_KEY_PASSWORD=har1gun2
