--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-svg": "^13.10.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
